Cleanup gradle tasks, generator classes and organize pipeline classes